Added IBM certifications to main page.

--- a/index.html
+++ b/index.html
@@ -239,6 +239,8 @@
                                         <li>Critical Career Skills - Generative AI Foundations</li>
                                         <li>EXIN Secure Programming Foundation</li>
                                         <li>Flutter Certified Application Developer</li>
+                                        <li>IBM Certified Advocate - Cloud v2</li>
+                                        <li>IBM Certified Technical Advocate - Cloud v5</li>
                                         <li>International Institute of Business Analysis&trade; Certificate in Cybersecurity Analysis</li>
                                         <li>IASSC&#174; Certified Lean Practitioner&trade;</li>
                                         <li>ISTQB Certified Tester, Foundation Level</li>
