Updated certification expenses spreadsheet.

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                             <div id="active-certs" class="accordion-collapse collapse" aria-labelledby="active-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><strong>Palo Alto Networks Certified Cybersecurity Practitioner</strong><br>June 11, 2025</li>
                                         <li><strong>Certified Argo Project Associate</strong><br>February 27, 2025 - February 28, 2027</li>
                                         <li><strong>Palo Alto Networks Certified Cybersecurity Apprentice</strong><br>February 2, 2025 - February 2, 2027</li>
                                         <li><strong>FinOps Certified Practitioner</strong><br>January 26, 2025 - January 26, 2027</li>
@@ -256,6 +257,7 @@
                                         <li>IT Specialist - Python</li>
                                         <li>IT Specialist - Software Development</li>
                                         <li>Java Certified Foundations Associate</li>
+                                        <li>JSA - Certified Associate JavaScript Programmer</li>
                                         <li>JSE - Certified Entry-Level JavaScript Programmer</li>
                                         <li>Lean Six Sigma Black Belt Certification (The Council for Six Sigma Certification)</li>
                                         <li>Lean Six Sigma Green Belt Certification (The Council for Six Sigma Certification)</li>
