--- a/index.html
+++ b/index.html
@@ -163,15 +163,15 @@
                             <div id="active-certs" class="accordion-collapse collapse" aria-labelledby="active-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
-                                        <li><strong>Palo Alto Networks Certified Cybersecurity Practitioner</strong><br>June 11, 2025</li>
+                                        <li><strong>Palo Alto Networks Certified Cybersecurity Practitioner</strong><br>June 11, 2025 - June 11, 2027</li>
                                         <li><strong>Certified Argo Project Associate</strong><br>February 27, 2025 - February 28, 2027</li>
-                                        <li><strong>Palo Alto Networks Certified Cybersecurity Apprentice</strong><br>February 2, 2025 - February 2, 2027</li>
+                                        <li><strong>Palo Alto Networks Certified Cybersecurity Apprentice</strong><br>February 2, 2025 - June 11, 2027</li>
                                         <li><strong>FinOps Certified Practitioner</strong><br>January 26, 2025 - January 26, 2027</li>
                                         <li><strong>Certified Associate in Software Testing (CAST)</strong><br>December 7, 2024 - December 7, 2027</li>
                                         <li><strong>Software Development Skills Foundation (Python)</strong><br>December 7, 2024 - December 7, 2029</li>
                                         <li><strong>Tencent Cloud Practitioner</strong><br>October 9, 2024 - October 9, 2026</li>
                                         <li><strong>HashiCorp Certified: Terraform Associate (003)</strong><br>October 4, 2024 - October 4, 2026
-                                        <br><strong style="color: red">HashiCorp Certified: Terraform Associate (002)</strong><br>November 26, 2022 - November 25, 2024</li>
+                                        <br><span style="color: red"><strong>HashiCorp Certified: Terraform Associate (002)</strong><br>November 26, 2022 - November 25, 2024</span></li>
                                         <li><strong>Alibaba Cloud Certified Associate Cloud Computing</strong><br>September 20, 2024 - September 20, 2026</li>
                                         <li><strong>Oracle Cloud Infrastructure 2024 Foundations Associate</strong><br>September 8, 2024 - September 8, 2026</li>
                                         <li><strong>Prometheus Certified Associate</strong><br>August 10, 2024 - August 11, 2026</li>
