--- a/index.html
+++ b/index.html
@@ -168,7 +168,6 @@
                                         <li><strong>Palo Alto Networks Certified Cybersecurity Apprentice</strong><br>February 2, 2025 - June 11, 2027</li>
                                         <li><strong>FinOps Certified Practitioner</strong><br>January 26, 2025 - January 26, 2027</li>
                                         <li><strong>Certified Associate in Software Testing (CAST)</strong><br>December 7, 2024 - December 7, 2027</li>
-                                        <li><strong>Software Development Skills Foundation (Python)</strong><br>December 7, 2024 - December 7, 2029</li>
                                         <li><strong>Tencent Cloud Practitioner</strong><br>October 9, 2024 - October 9, 2026</li>
                                         <li><strong>HashiCorp Certified: Terraform Associate (003)</strong><br>October 4, 2024 - October 4, 2026
                                         <br><span style="color: red"><strong>HashiCorp Certified: Terraform Associate (002)</strong><br>November 26, 2022 - November 25, 2024</span></li>
@@ -308,6 +307,7 @@
                                         <li>Software Development Skills Essentials - Intro to Web Programming</li>
                                         <li>Software Development Skills Foundation (Java)</li>
                                         <li>Software Development Skills Foundation (JavaScript)</li>
+                                        <li>Software Development Skills Foundation (Python)</li>
                                         <li>Spring Certified Professional 2022 (EDU-1202)</li>
                                         <li>WDE - Certified Entry-Level Web Developer</li>
                                     </ol>
