Updated list of certifications on main page.

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                             <div id="active-certs" class="accordion-collapse collapse" aria-labelledby="active-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><strong>CertNexus Cyber Secure Coder (CSC)</strong><br>June 27, 2025 - June 27, 2028</li>
                                         <li><strong>Palo Alto Networks Certified Cybersecurity Practitioner</strong><br>June 11, 2025 - June 11, 2027</li>
                                         <li><strong>Certified Argo Project Associate</strong><br>February 27, 2025 - February 28, 2027</li>
                                         <li><strong>Palo Alto Networks Certified Cybersecurity Apprentice</strong><br>February 2, 2025 - June 11, 2027</li>
@@ -184,7 +185,9 @@
                                         <li><strong>IASSC&#174; Certified Yellow Belt&trade; ICYB&trade;</strong><br>May 19, 2023 - May 19, 2026</li>
                                         <li><strong>Google Cloud Certified Cloud Digital Leader</strong><br>April 3, 2023 - April 3, 2026</li>
                                         <li><strong>AWS Certified Developer Associate (DVA-C01)</strong><br>February 22, 2023 - February 22, 2026</li>
+                                        <li><strong>CIW Advanced HTML5 &amp; CSS3 Specialist (1D0-720)</strong>December 30, 2022 - October 1, 2027</li>
                                         <li><strong>Linux Foundation Certified IT Associate (LFCA)</strong><br>December 30, 2022 - December 30, 2025</li>
+                                        <li><strong>CIW Web Foundations Associate (1D0-610)</strong>December 26, 2022 - October 1, 2027</li>
                                         <li><strong>CompTIA Data+ ce</strong><br>October 21, 2022 - October 21, 2028</li>
                                         <li><strong>AWS Certified Cloud Practitioner (CLF-C01)</strong><br>September 23, 2022 - February 22, 2026</li>
                                         <li><strong>(ISC)<sup>2</sup> Certified in Cybersecurity (CC)</strong><br>September 2, 2022 - September 30, 2025</li>
@@ -221,8 +224,6 @@
                                         <li>Certified Junior JavaScript Developer</li>
                                         <li>Cisco Certified Support Technician Cybersecurity</li>
                                         <li>Cisco Certified Support Technician Networking</li>
-                                        <li>CIW Advanced HTML5 &amp; CSS3 Specialist (1D0-720)</li>
-                                        <li>CIW Web Foundations Associate (1D0-610)</li>
                                         <li>CIW Web Security Professional (1D0-671)</li>
                                         <li>CLA - C Certified Associate Programmer</li>
                                         <li>CLE - C Certified Entry-Level Programmer</li>
