Added 1 Pluralsight course certificate. Updated resume.

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                             <div id="active-certs" class="accordion-collapse collapse" aria-labelledby="active-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><strong>App Development with Swift Certified User</strong><br>July 9, 2025 - July 9, 2030</li>
                                         <li><strong>CertNexus Cyber Secure Coder (CSC)</strong><br>June 27, 2025 - June 27, 2028</li>
                                         <li><strong>Palo Alto Networks Certified Cybersecurity Practitioner</strong><br>June 11, 2025 - June 11, 2027</li>
                                         <li><strong>Certified Argo Project Associate</strong><br>February 27, 2025 - February 28, 2027</li>
