Updated expiry date of LPIC-1.

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                         <li><strong>CompTIA Cybersecurity Analyst (CySA+) ce</strong><br>August 12, 2020 - May 25, 2029</li>
                                         <li><strong>(ISC)<sup>2</sup> Certified Cloud Security Professional (CCSP)</strong><br>September 16, 2019 - September 30, 2025</li>
                                         <li><strong>(ISC)<sup>2</sup> Certified Information Systems Security Professional (CISSP)</strong><br>March 26, 2019 - March 31, 2027</li>
-                                        <li><strong>Linux Professional Institute LPIC-1</strong><br>September 8, 2018 - August 14, 2025</li>
+                                        <li><strong>LPIC-1 Certification</strong><br>September 8, 2018 - August 14, 2028</li>
                                         <li><strong>(ISC)<sup>2</sup> Certified Secure Software Lifecycle Professional (CSSLP)</strong><br>April 25, 2018 - April 20, 2024</li>
                                         <li><strong>CompTIA SecurityX ce</strong><br>May 25, 2017 - May 25, 2029</li>
                                         <li><strong>CompTIA Cloud+ ce</strong><br>August 20, 2015 - August 20, 2030</li>
