Updated certification expenses spreadsheet. Updated list of certifications on main page.

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
                                         <li>Certificate of Cloud Security Knowledge (CCSK) v5</li>
                                         <li>Certified Junior JavaScript Developer</li>
                                         <li>Cisco Certified Support Technician Cybersecurity</li>
+                                        <li>Cisco Certified Support Technician IT Support</li>
                                         <li>Cisco Certified Support Technician Networking</li>
                                         <li>CIW Web Security Professional (1D0-671)</li>
                                         <li>CLA - C Certified Associate Programmer</li>
