Updated certification expenses spreadsheet.

--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
                                         <li>SC102: Source Control Management with Git</li>
                                         <li>SC107: Pattern Matching with Regular Expressions</li>
                                         <li>Software Development Skills Essentials - Intro to Web Programming</li>
+                                        <li>Software Development Skills Foundation (C#)</li>
                                         <li>Software Development Skills Foundation (Java)</li>
                                         <li>Software Development Skills Foundation (JavaScript)</li>
                                         <li>Software Development Skills Foundation (Python)</li>
