Updated certifications poster and expenses spreadsheet.

--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
                                         <li>Oracle Certified Professional, Java SE 8 Programmer</li>
                                         <li>Oracle Certified Professional: Java SE 11 Developer</li>
                                         <li>Oracle Certified Professional: Java SE 17 Developer</li>
+                                        <li>PCAD - Certified Associate Data Analyst with Python</li>
                                         <li>PCAP - Certified Associate in Python Programming</li>
                                         <li>PCED - Certified Entry-Level Data Analyst with Python</li>
                                         <li>PCET - Certified Entry-Level Tester with Python</li>
