Updated list of certifications.

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                                 <div class="accordion-body">
                                     <ol reversed>
                                         <li><a href="https://www.credly.com/badges/dbea5804-eda4-4958-b076-b05a63efa6f4" target="_blank">[PCAD-31-01] PCAD&trade; - Certified Associate Data Analyst with Python</a></li>
-                                        <li><a href="https://badges.peoplecert.org/Badge/en/2867E781-4259-4057-879C-6387F497D58E" target="_blank">Software Development Skills Foundation (C\#)</a></li>
+                                        <li><a href="https://badges.peoplecert.org/Badge/en/2867E781-4259-4057-879C-6387F497D58E" target="_blank">Software Development Skills Foundation (C#)</a></li>
                                         <li><a href="https://cp.certmetrics.com/cisco/en/public/verify/credential/4e770fcbc96a4b8c99aee8a7577be65e" target="_blank">Cisco Certified Support Technician IT Support - Lifetime</a></li>
                                         <li><a href="https://www.credly.com/badges/1d6b6a29-8b44-4c64-bbe7-ca7c9c13a276" target="_blank">[JSA-41-01] JSA - Certified Associate JavaScript Programmer</a></li>
                                         <li><a href="https://www.credly.com/badges/7bfef0ef-0b17-4147-81c8-eebcb1d03d33" target="_blank">IBM Certified Advocate - Cloud v2</a></li>
@@ -270,7 +270,7 @@
                                         <li><a href="https://www.credly.com/badges/05caf753-8ff0-4613-8136-1b2942aa8114" target="_blank">Microsoft Office Specialist: Excel Associate (Office 2019)</a></li>
                                         <li><a href="https://www.credential.net/a7b60784-5db4-4e65-a0fa-66af1cc82253#acc.v49QrOYz" target="_blank">CIW Web Security Professional (1D0-671)</a></li>
                                         <li><a href="https://www.credly.com/badges/e13dff51-68b7-41c8-af16-e51ca31c31f3" target="_blank">Web Development Essentials Certificate</a></li>
-                                        <li><a href="https://badges.iiba.org/d0852eda-2bc6-46a6-b7cb-ff8e8cdf47ac" target="_blank">International Institute of Business Analysis&trade;\phantom{0}Certificate in Cybersecurity Analysis</a></li>
+                                        <li><a href="https://badges.iiba.org/d0852eda-2bc6-46a6-b7cb-ff8e8cdf47ac" target="_blank">International Institute of Business Analysis&trade; Certificate in Cybersecurity Analysis</a></li>
                                         <li><a href="https://www.credly.com/badges/4819f13c-0e42-41ce-8d58-7af289ccdabb" target="_blank">Linux Essentials Certificate</a></li>
                                         <li><a href="https://www.credly.com/badges/f729642a-e61b-4cb5-b38e-a153d36ffe5d" target="_blank">CompTIA Cloud Essentials+</a></li>
                                         <li><a href="https://androidatc.com/_transcript.php?action=public&u=ksuc1NfjztZglJacwtHW5%2Bmpy5%2BRmpyP0dPf" target="_blank">Android ATC Android Certified Trainer (AND-400)</a></li>
