Updated text in privacy policy for Morse Code Transmitter.

--- a/files/privacy_policies/morse_code_transmitter.html
+++ b/files/privacy_policies/morse_code_transmitter.html
@@ -128,7 +128,7 @@
                             <h5 class="card-title text-success">
                                 <i class="bi bi-check-circle me-2"></i>No Usage Tracking
                             </h5>
-                            <p class="card-text">We do not track how you use our application or monitor your activities.</p>
+                            <p class="card-text">We do not track how you use Morse Code Transmitter or monitor your activities.</p>
                         </div>
                     </div>
                 </div>
@@ -156,8 +156,8 @@
         </div>
 
         <div class="policy-section">
-            <h2><i class="bi bi-laptop me-2"></i>How Our Application Works</h2>
-            <p>Our application runs entirely in your web browser. Any data or settings you create stay on your device only. When you close the application, nothing is sent to us or stored anywhere else.</p>
+            <h2><i class="bi bi-laptop me-2"></i>How Morse Code Transmitter Works</h2>
+            <p>Morse Code Transmitter runs entirely on your device. Any data or settings you create stay on your device only. When you close the application, nothing is sent to us or stored anywhere else.</p>
             <p>Think of it like using a calculator - we provide the tool, but we never see or keep track of what calculations you perform.</p>
         </div>
 
@@ -190,7 +190,7 @@
 
         <div class="contact-info">
             <h2><i class="bi bi-envelope me-2"></i>Questions?</h2>
-            <p class="mb-0">If you have any questions about this privacy policy or our application, please feel free to <a href="mailto:bj.peter.delacruz@gmail.com">contact us</a>. We believe in being completely transparent about how we handle (or in this case, don't handle) your information.</p>
+            <p class="mb-0">If you have any questions about this privacy policy or Morse Code Transmitter, please feel free to <a href="mailto:bj.peter.delacruz@gmail.com">contact us</a>. We believe in being completely transparent about how we handle (or in this case, don't handle) your information.</p>
         </div>
 
         <div class="last-updated">
