Added link to new certification badge.

--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                             <div id="lifetime-certs" class="accordion-collapse collapse" aria-labelledby="lifetime-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><a href="https://badges.peoplecert.org/Badge/en/6CF652B4-B27D-4B7F-B0DC-D10D3ACA7B72">Software Development Skills Advanced (JavaScript)</a></li>
                                         <li><a href="https://www.credly.com/badges/dbea5804-eda4-4958-b076-b05a63efa6f4" target="_blank">[PCAD-31-01] PCAD&trade; - Certified Associate Data Analyst with Python</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/2867E781-4259-4057-879C-6387F497D58E" target="_blank">Software Development Skills Foundation (C#)</a></li>
                                         <li><a href="https://cp.certmetrics.com/cisco/en/public/verify/credential/4e770fcbc96a4b8c99aee8a7577be65e" target="_blank">Cisco Certified Support Technician IT Support - Lifetime</a></li>
