--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                             <div id="lifetime-certs" class="accordion-collapse collapse" aria-labelledby="lifetime-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><a href="" target="_blank">Software Development Skills Advanced (Python)</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/3E648AF0-144B-4AA6-93B5-B89808E7A74F" target="_blank">PeopleCert Scrum Developer</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/7924C9D1-7D56-4F63-BC93-91F3FC2D43F5" target="_blank">Software Development Skills Advanced (Java)</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/6CF652B4-B27D-4B7F-B0DC-D10D3ACA7B72" target="_blank">Software Development Skills Advanced (JavaScript)</a></li>
