--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                             <div id="lifetime-certs" class="accordion-collapse collapse" aria-labelledby="lifetime-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
-                                        <li><a href="">PeopleCert Scrum Master I</a></li>
+                                        <li><a href="https://badges.peoplecert.org/Badge/en/B42EC147-F621-4903-A68D-514C29D1F07F" target="_blank">PeopleCert Scrum Master I</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/7C011580-D6EE-4DC0-949F-E70955E01B2B" target="_blank">Software DevSkills C# Advanced</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/784516CE-E0B8-4F62-BB8F-A54728E2C7F9" target="_blank">Software Development Skills Advanced (Python)</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/3E648AF0-144B-4AA6-93B5-B89808E7A74F" target="_blank">PeopleCert Scrum Developer</a></li>
