--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                             <div id="lifetime-certs" class="accordion-collapse collapse" aria-labelledby="lifetime-certs-heading" data-bs-parent="#resume">
                                 <div class="accordion-body">
                                     <ol reversed>
+                                        <li><a href="https://www.credly.com/badges/4e34e0e9-0af9-471d-9c04-5b9c00939395" target="_blank">Professional Scrum Product Owner&trade; I (PSPO I)</a></li>
                                         <li><a href="https://www.credly.com/badges/b01ca95b-5cfd-4932-97c0-19a602618ab0" target="_blank">Professional Scrum Master&trade; I (PSM I)</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/B42EC147-F621-4903-A68D-514C29D1F07F" target="_blank">PeopleCert Scrum Master I</a></li>
                                         <li><a href="https://badges.peoplecert.org/Badge/en/7C011580-D6EE-4DC0-949F-E70955E01B2B" target="_blank">Software DevSkills C# Advanced</a></li>
